Fix spacing and border color on dark themes
(cherry picked from commit 307c87420ca4555cc9ab9021a82eec33f6f6d91f)

--- a/src/app/pages/account/groups/members/members.component.css
+++ b/src/app/pages/account/groups/members/members.component.css
@@ -36,4 +36,5 @@
 
 mat-card-title {
   margin-left: 15px;
+  margin-top: 15px !important;
 }
